--- a/src/index.css
+++ b/src/index.css
@@ -1,119 +1,3 @@
-:root {
-    --the-green: #01fe8b;
-    --the-light: #ceffd5;
-    --the-dark: rgb(17, 134, 32); /* It hurts you */
-    --the-darker: rgb(7, 66, 15);
-    --font-muted: rgb(100, 100, 100);
-}
-
-/* 
-@media (prefers-color-scheme: light) {
-    :root {
-        --the-green: #78e8fe;
-        --the-light: #bdeef8;
-        --the-dark: #4eb5ca;
-        --the-darker: #13414b;
-        --font-muted: rgb(100, 100, 100);
-    }
-} */
-
-html {
-    width: 100%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    padding-top: 140px;
-    width: 100%;
-}
-
-hr {
-    border: none;
-    border-top-color: rgb(17, 134, 32);
-    border-top-style: dotted;
-    border-top-width: 1px;
-    margin-top: 12px;
-    margin-bottom: 12px;
-}
-
-summary {
-    color: var(--the-darker);
-    cursor: pointer;
-}
-
-details > summary::marker {
-    font-size: 24px;
-}
-
-summary > h2 {
-    display: inline-block;
-    font-size: 20px;
-}
-
-details > div {
-    padding-left: 26px;
-}
-
-.noscroll {
-    overflow: hidden;
-}
-
-.polkadot-bg {
-    background-image: linear-gradient(201deg, var(--the-light) 0%, var(--the-green) 74%);
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    overflow: hidden;
-}
-
-.polkadot-bg-inner {
-    background-image: url("img/circle.png");
-    background-repeat: repeat;
-    position: absolute;
-    top: -100vh;
-    left: 0;
-    bottom: 0;
-    right: -100vw;
-    transform: rotateZ(10deg);
-
-    animation-name: polkadot-anim;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-
-@keyframes polkadot-anim {
-    0% {
-        transform: rotateZ(10deg) translate(0, 0);
-    }
-
-    100% {
-        transform: rotateZ(10deg) translate(-80px, 80px);
-    }
-}
-
-.page {
-    display: flex;
-    justify-content: center;
-}
-
-.content {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
-    max-width: 1100px;
-    column-gap: 40px;
-    row-gap: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
-}
 
 .col {
     border-width: 1px;
@@ -129,26 +13,6 @@ details > div {
 .col-data {
     min-width: 300px;
     flex-grow: 1;
-}
-
-.card {
-    border-radius: 12px;
-    filter: drop-shadow(0 0 10px var(--the-dark));
-    padding: 20px;
-    backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.5);
-    margin-bottom: 40px;
-    position: relative;
-}
-
-.card-sticky {
-    position: sticky;
-    top: 140px;
-}
-
-.center-image {
-    display: flex;
-    justify-content: center;
 }
 
 .pfp-img-container {
@@ -174,7 +38,8 @@ details > div {
     opacity: 1;
 }
 
-.pfp-img-container:hover .pfp-img-surprised {
+.pfp-img-container:hover .pfp-img-surprised,
+.pfp-img-container:active .pfp-img-surprised {
     display: block;
     animation-name: surprise-anim;
     animation-duration: 0.25s;
@@ -193,15 +58,15 @@ details > div {
     }
 }
 
-.bounce:hover {
-    animation-name: pfp-hover-anim;
+.bounce-hover:hover, .bounce-active:active {
+    animation-name: bounce-anim;
     animation-duration: 0.2s;
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
 }
 
-@keyframes pfp-hover-anim {
+@keyframes bounce-anim {
 	0% {
 		transform: none;
     }
@@ -297,6 +162,19 @@ details > div {
     padding-top: 4px;
     padding-bottom: 4px;
     font-weight: bold;
+    text-decoration: none;
+}
+
+.warning-message-error {
+    background-image: repeating-linear-gradient(
+        45deg,
+        var(--error-color), var(--error-color) 10px,
+        transparent 10px, transparent 20px
+    );
+}
+
+.warning-message-error .warning-text {
+    background-color: var(--error-color);
 }
 
 .scroll-text-container {
@@ -368,6 +246,9 @@ details > div {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    overflow: hidden;
+    border-radius: 8px;
 }
 
 .portfolio-preview-img {
@@ -384,72 +265,14 @@ details > div {
 
 .portfolio-preview-img:hover {
     transform: scale(0.9);
-    border-radius: 6px;
+    border-radius: 4px;
 }
 
 .portfolio-preview-img:active {
     transform: scale(0.8);
 }
 
-.lightbox {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.75);
-
-    animation-name: lightbox-in-anim;
-    animation-duration: 0.2s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-}
-
-@keyframes lightbox-in-anim {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-.lightbox-controls {
-    text-align: right;
-    padding: 20px;
-    height: 40px;
-}
-
-.lightbox-control-button {
-    cursor: pointer;
-    display: inline-block;
-    filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.75));
-    transition: transform 0.2s ease, color 0.1s ease;
-    font-size: 36px;
-    color: white;
-}
-
-.lightbox-control-button:hover {
-    transform: scale(1.1);
-}
-
-.lightbox-control-button:active {
-    color: var(--the-green);
-    transform: scale(0.9);
-}
-
-.lightbox-img-controls {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 4px;
-    padding-right: 4px;
-    height: calc(100vh - 80px - 80px);
-}
-
-.lightbox-img {
-    max-width: calc(100vw - 80px - 80px);
-    max-height: calc(100vh - 80px - 80px);
-    border-radius: 8px;
-    filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.75));
+.portfolio-preview-link {
+    margin-top: 8px;
+    text-align: center;
 }
