--- a/docs/index.css
+++ b/docs/index.css
@@ -104,6 +104,7 @@
         color 0.2s ease
         ;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .social-icon > * {
@@ -279,4 +280,58 @@
 .portfolio-preview-link {
     margin-top: 8px;
     text-align: center;
+}
+
+.trello-board {
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    
+    animation-name: lightbox-in-anim;
+    animation-duration: 0.2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+}
+
+.trello-board-iframe {
+    border: 0;
+    overflow: hidden;
+    border-radius: 12px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    max-width: 1200px;
+    max-height: 800px;
+}
+
+@keyframes trello-board-in-anim {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.trello-board-container {
+    padding-left: 20px;
+    padding-right: 20px;
+    width: calc(100% - 40px);
+    height: calc(100% - 120px);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.trello-board-new-tab {
+    display: inline-block;
+    margin-top: 8px;
+    color: white;
+    filter: drop-shadow(0 0 4px black);
 }
