--- a/docs/lightbox.css
+++ b/docs/lightbox.css
@@ -11,6 +11,10 @@
     animation-duration: 0.2s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @keyframes lightbox-in-anim {
@@ -35,6 +39,8 @@
     transition: transform 0.2s ease, color 0.1s ease;
     font-size: 36px;
     color: white;
+    position: relative;
+    z-index: 2;
 }
 
 .lightbox-control-button:hover {
@@ -44,6 +50,24 @@
 .lightbox-control-button:active {
     color: var(--the-green);
     transform: scale(0.9);
+}
+
+.lightbox-exit {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+}
+
+.lightbox-previous {
+    position: fixed;
+    top: calc(50% - 20px);
+    left: 10px;
+}
+
+.lightbox-next {
+    position: fixed;
+    top: calc(50% - 20px);
+    right: 10px;
 }
 
 .lightbox-img-controls {
@@ -56,15 +80,28 @@
 }
 
 .lightbox-img {
-    max-width: calc(100vw - 80px - 80px);
-    max-height: calc(100vh - 80px - 80px);
+    max-width: calc(100vw - 160px);
+    max-height: calc(100vh - 160px);
     border-radius: 8px;
     filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.75));
     cursor: pointer;
 }
 
+@media (width <= 420px) {
+    .lightbox-img {
+        max-width: calc(100vw - 20px);
+        max-height: calc(100vh - 20px);
+    }
+    .lightbox-control-button {
+        filter: drop-shadow(0 0 4px rgba(0, 0, 0, 1));
+    }
+}
+
 .lightbox-img-info {
+    position: fixed;
+    bottom: 20px;
     height: 56px;
+
     filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.75));
     color: rgb(220, 220, 220);
     font-size: 18px;
